logs/tolk.log
Listing '.'...
Listing './bin'...
Compiling './bin/miniterm.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Logbook-1.1.0.egg-info'...
Listing './lib/python3.5/site-packages/Tolk-0.2.1.egg-info'...
Listing './lib/python3.5/site-packages/docopt-0.6.2.egg-info'...
Listing './lib/python3.5/site-packages/logbook'...
Listing './lib/python3.5/site-packages/modbus_tk'...
Listing './lib/python3.5/site-packages/modbus_tk-0.5.8.egg-info'...
Listing './lib/python3.5/site-packages/munch'...
Listing './lib/python3.5/site-packages/munch-2.2.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyjsonrpc'...
Compiling './lib/python3.5/site-packages/pyjsonrpc/http.py'...
***   File "./lib/python3.5/site-packages/pyjsonrpc/http.py", line 558
    print "Content-Type: application/json"
                                         ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pyserial-3.4.dist-info'...
Listing './lib/python3.5/site-packages/python_jsonrpc-0.10.0.egg-info'...
Listing './lib/python3.5/site-packages/scripts'...
Listing './lib/python3.5/site-packages/serial'...
Listing './lib/python3.5/site-packages/serial/threaded'...
Listing './lib/python3.5/site-packages/serial/tools'...
Listing './lib/python3.5/site-packages/serial/urlhandler'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/tolk'...
Listing './share'...
Listing './share/python-wheels'...
